# lintent

./: .gitignore  CHANGELOG.md  DEVGUIDE.md  LICENSE  README.md  ascii.txt  package-lock.json  package.json  tsconfig.json
.github/workflows/: docs.yml  publish.yml
docs/: add-og-tags.py  mkdocs.yml
docs/docs/: index.md  troubleshooting.md
docs/docs/ai-agents/: overview.md
docs/docs/concepts/: auto-detection.md  how-it-works.md  semantic-rules.md
docs/docs/getting-started/: configuration.md  installation.md  quick-start.md
docs/docs/guides/: ci-cd.md  cursor-integration.md  monorepo.md  python.md  typescript.md
docs/docs/reference/: cli.md  config.md  output.md  presets.md
docs/docs/stylesheets/: custom.css
docs/overrides/: .gitkeep
docs/stylesheets/: custom.css  shadcn.css
examples/python-app/: lintent.yaml  pyproject.toml
examples/python-app/.cursor/rules/: lintent.mdc
examples/python-app/src/: __init__.py  main.py  utils.py
examples/typescript-app/: eslint.config.js  lintent.yaml  package-lock.json  package.json  tsconfig.json
examples/typescript-app/src/: index.ts  utils.ts
presets/: python.yaml  typescript.yaml
src/: config.ts  enricher.ts  index.ts  output.ts
src/commands/: guide.ts  init.ts  list.ts  run.ts  validate.ts
src/linters/: detector.ts  eslint.ts  index.ts  pyright.ts  ruff.ts  runner.ts  types.ts  typescript.ts
tests/: config.test.ts  detector.test.ts  enricher.test.ts  parsers.test.ts
